--- a/config_bittner.yaml
+++ b/config_bittner.yaml
@@ -8,20 +8,24 @@ model:
             - [Activation, ReLU]
         - component_l:
             - [BatchNorm2d, {'num_features': -1}]
-            - [Conv2d, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [5,5], 'stride': 1, 'padding': 'same'}]
+#            - [Conv2d, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [5,5], 'stride': 1, 'padding': 'same'}]
 #            - [Conv2dDS, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [5,5], 'stride': 1, 'padding': 'same'}]
+#            - [Activation, ReLU]
+            - [Conv2dRes, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [5,5], 'stride': 1, 'padding': 'same'}]
+        - component_l:
+            - [BatchNorm2d, {'num_features': -1}]
+#            - [Conv2d, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
+#            - [Conv2dDS, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
+#            - [Activation, ReLU]
 #            - [Conv2dRes, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [5,5], 'stride': 1, 'padding': 'same'}]
-            - [Activation, ReLU]
+            - [Conv2dNext, {'in_channels': -1, 'out_channels': 64, 'stride': 1, 'padding': 'same'}]
         - component_l:
             - [BatchNorm2d, {'num_features': -1}]
-            - [Conv2d, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
+#            - [Conv2d, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
 #            - [Conv2dDS, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
-            - [Activation, ReLU]
-        - component_l:
-            - [BatchNorm2d, {'num_features': -1}]
-            - [Conv2d, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
-#            - [Conv2dDS, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
-            - [Activation, ReLU]
+#            - [Activation, ReLU]
+#            - [Conv2dRes, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [5,5], 'stride': 1, 'padding': 'same'}]
+            - [Conv2dNext, {'in_channels': -1, 'out_channels': 64, 'stride': 1, 'padding': 'same'}]
         - component_l:
             - [BatchNorm2d, {'num_features': -1}]
             - [Conv2d, {'in_channels': -1, 'out_channels': 8, 'kernel_size': [70,3], 'stride': 1, 'padding': 'same'}]
