--- a/config_autotagging.yaml
+++ b/config_autotagging.yaml
@@ -2,7 +2,7 @@ model:
     name: AutoTagging
     block_l:
     - sequential_l:
-        - component_l:
+        - layer_l:
 # Temporal
             #- [LayerNorm, {'normalized_shape': [1, 3200]}]
 # SincNet            
@@ -22,42 +22,42 @@ model:
             - [LayerNorm, {'normalized_shape': -1}]
             - [Activation, LeakyReLU]
             - [Dropout, {'p': 0}]
-        - component_l:
+        - layer_l:
             - [Conv1d, {'in_channels': -1, 'out_channels': 60, 'kernel_size': 5, 'stride': 1}]
             - [MaxPool1d, {'kernel_size': 3, 'stride': 3}] 
             - [LayerNorm, {'normalized_shape': -1}]
             - [Activation, LeakyReLU]
             - [Dropout, {'p': 0}]
-        - component_l:
+        - layer_l:
             - [Conv1d, {'in_channels': -1, 'out_channels': 60, 'kernel_size': 5, 'stride': 1}]
             - [MaxPool1d, {'kernel_size': 3, 'stride': 3}]
             - [LayerNorm, {'normalized_shape': -1}]
             - [Activation, LeakyReLU]
             - [Dropout, {'p': 0}]
-        - component_l:
+        - layer_l:
             - ['Permute', {'shape': [0, 2, 1]}]
     - sequential_l:
-        - component_l:
+        - layer_l:
             - [LayerNorm, {'normalized_shape': -1}]
             - [Linear, {'in_features': -1, 'out_features': 128}] # --- 2048 -> 128
             - [BatchNorm1dT, {'num_features': -1}]
             - [Activation, LeakyReLU]
             - [Dropout, {'p': 0}]
-        - component_l:
+        - layer_l:
             - [Linear, {'in_features': -1, 'out_features': 128}] # --- 2048 -> 128
             - [BatchNorm1dT, {'num_features': -1}]
             - [Activation, LeakyReLU]
             - [Dropout, {'p': 0}]
-        - component_l:
+        - layer_l:
             - [Linear, {'in_features': -1, 'out_features': 128}] # --- 2048 -> 128
             - [BatchNorm1dT, {'num_features': -1}]
             - [Activation, LeakyReLU]
             - [Dropout, {'p': 0}]
-        - component_l:
+        - layer_l:
             - ['Permute', {'shape':[0, 2, 1]}]
-        - component_l:
+        - layer_l:
             - [Mean, {'dim': 2}]
     - sequential_l:
-        - component_l:
+        - layer_l:
             - [Linear, {'in_features': -1, 'out_features': 10}]
     #          - [Activation, Softmax]
