--- a/config_doras.yaml
+++ b/config_doras.yaml
@@ -1,52 +1,64 @@
 model:
     name: Doras
     block_l:
-    - encoder_l:
-        - component_l:
+    - sequential_l: # --- encoder
+        - layer_l:
             - [BatchNorm2d, {'num_features': -1}]
             - [Conv2d, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
             - [Conv2d, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
             - [Activation, ReLU]
-        - component_l:
+        - layer_l:
+            - [StoreAs, E64]
+        - layer_l:
             - [BatchNorm2d, {'num_features': -1}]
             - [Conv2d, {'in_channels': -1, 'out_channels': 128, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
             - [Conv2d, {'in_channels': -1, 'out_channels': 128, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
             - [MaxPool2d, {'kernel_size': [2,2]}]
             - [Activation, ReLU]
-        - component_l:
+        - layer_l:
+            - [StoreAs, E128]
+        - layer_l:
             - [BatchNorm2d, {'num_features': -1}]
             - [Conv2d, {'in_channels': -1, 'out_channels': 256, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
             - [Conv2d, {'in_channels': -1, 'out_channels': 256, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
             - [MaxPool2d, {'kernel_size': [2,2]}]
             - [Activation, ReLU]
-        - component_l:
+        - layer_l:
+            - [StoreAs, E256]
+        - layer_l:
             - [BatchNorm2d, {'num_features': -1}]
             - [Conv2d, {'in_channels': -1, 'out_channels': 512, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
             - [Conv2d, {'in_channels': -1, 'out_channels': 512, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
             - [MaxPool2d, {'kernel_size': [2,2]}]
             - [Activation, ReLU]
-    - decoder_l:
-        - component_l:
+    - sequential_l: # --- decoder
+        - layer_l:
             - [BatchNorm2d, {'num_features': -1}]
             - [ConvTranspose2d, {'in_channels': -1, 'out_channels': 256, 'kernel_size': [2,2], 'stride': [2,2]}]
             - [Conv2d, {'in_channels': -1, 'out_channels': 256, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
             - [Conv2d, {'in_channels': -1, 'out_channels': 256, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
             - [Activation, ReLU]
-        - component_l:
+        - layer_l:
+            - [CatWith, E256]
+        - layer_l:
             - [DoubleChannel, empty]
             - [BatchNorm2d, {'num_features': -1}]
             - [ConvTranspose2d, {'in_channels': -1, 'out_channels': 128, 'kernel_size': [2,2], 'stride': [2,2]}]
             - [Conv2d, {'in_channels': -1, 'out_channels': 128, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
             - [Conv2d, {'in_channels': -1, 'out_channels': 128, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
             - [Activation, ReLU]
-        - component_l:
+        - layer_l:
+            - [CatWith, E128]
+        - layer_l:
             - [DoubleChannel, empty]
             - [BatchNorm2d, {'num_features': -1}]
             - [ConvTranspose2d, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [2,2], 'stride': [2,2]}]
             - [Conv2d, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
             - [Conv2d, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
             - [Activation, ReLU]
-        - component_l:
+        - layer_l:
+            - [CatWith, E64]
+        - layer_l:
             - [DoubleChannel, empty]
             - [BatchNorm2d, {'num_features': -1}]
             - [Conv2d, {'in_channels': -1, 'out_channels': 1, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
