--- a/config_doras.yaml
+++ b/config_doras.yaml
@@ -1,3 +1,15 @@
+# D1 I2 Unet
+output_file: {'origin': 'TUTO_task_Multi_Pitch_Estimation.ipynb', 'ext': '_D1-I2-Unet.ipynb'}
+dataset:
+    # D1
+    {'base': bach10, 'do_f0_annot': frame}
+    # D2
+    #{'base': maps, 'do_f0_annot': segment}
+feature:
+    # I1
+    #{'type': hcqt, 'h_l': [1], 'bins_per_semitone': 5, 'n_octaves': 6, 'fmin': 32.7,  'hop_length': 512, 'patch_L_frame': 64, 'patch_STEP_frame': 32}
+    # I2
+    {'type': hcqt, 'h_l': [0.5, 1, 2, 3, 4, 5] ,'bins_per_semitone': 5, 'n_octaves': 6, 'fmin': 32.7,  'hop_length': 512, 'patch_L_frame': 64, 'patch_STEP_frame': 32}
 model:
     name: Doras
     block_l:
