--- a/config_autotagging.yaml
+++ b/config_autotagging.yaml
@@ -1,9 +1,9 @@
 # D1 I1 C1 -> GTZAN, LMS, 2D *
 # D1 I2 C2 -> GTZAN, Waveform, SincNet *
 # D1 I2 C3 -> GTZAN, Waveform, Conv1D *
-# D1 I2 C4 -> GTZAN, Waveform, TCN
+# D1 I2 C4 -> GTZAN, Waveform, TCN *
 # D2 I1 C1 -> MTT, LMS, 2D *
-output_file: {'origin': 'TUTO_task_Auto_Tagging.ipynb', 'ext': '_D1-I2-C3.ipynb'}
+output_file: {'origin': 'TUTO_task_Auto_Tagging.ipynb', 'ext': '_D1-I2-C4.ipynb'}
 dataset:
     # D1
     {'base': gtzan-genre, 'problem': multiclass, 'annot_key': genre, 'n_out': 10}
@@ -29,9 +29,9 @@ model:
             #- [SincNet, {'in_channels': 1, 'out_channels': 80, 'kernel_size': 251, 'stride': 1, 'sr_hz': 22050}]
             #- [AbsLayer, empty]
             # C3 Conv1D
-            - [Conv1d, {'in_channels': 1, 'out_channels': 80, 'kernel_size': 251, 'stride': 15}]
+            #- [Conv1d, {'in_channels': 1, 'out_channels': 80, 'kernel_size': 251, 'stride': 15}]
             # C4 TCN
-            # - [Conv1dTCN, {'in_channels': 1, 'num_channels': [4, 8, 16, 32]}]
+            - [Conv1dTCN, {'in_channels': 1, 'num_channels': [4, 8, 16, 32]}]
             # C2, C3, C4 All temporal
             - [MaxPool1d, {'kernel_size': 3, 'stride': 3}]
             - [LayerNorm, {'normalized_shape': -1}]
