--- a/config_bittner.yaml
+++ b/config_bittner.yaml
@@ -5,7 +5,7 @@
 # D1 I2 C4 à faire
 # ---- 
 # D2 I2 C1 -> MAP -> very long
-output_file: {'origin': 'TUTO_task_Multi_Pitch_Estimation.ipynb', 'ext': '_D1-I2-C4.ipynb'}
+output_file: {'origin': 'TUTO_task_Multi_Pitch_Estimation.ipynb', 'ext': '_D1-I2-C1.ipynb'}
 dataset:
     # D1
     {'base': bach10, 'do_f0_annot': frame}
@@ -27,18 +27,18 @@ model:
         - layer_l:
             - [BatchNorm2d, {'num_features': -1}]
             # C1
-            #- [Conv2d, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [5,5], 'stride': 1, 'padding': 'same'}]
-            #- [Activation, ReLU]
+            - [Conv2d, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [5,5], 'stride': 1, 'padding': 'same'}]
+            - [Activation, ReLU]
             # C2
             #- [Conv2dDS, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [5,5], 'stride': 1, 'padding': 'same'}]
             #- [Activation, ReLU]
             # C3 / C4
-            - [Conv2dRes, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [5,5], 'stride': 1, 'padding': 'same'}]
+            #- [Conv2dRes, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [5,5], 'stride': 1, 'padding': 'same'}]
         - layer_l:
             - [BatchNorm2d, {'num_features': -1}]
             # C1
-            #- [Conv2d, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
-            #- [Activation, ReLU]
+            - [Conv2d, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
+            - [Activation, ReLU]
             # C2
             #- [Conv2dDS, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
             #- [Activation, ReLU]
@@ -49,8 +49,8 @@ model:
         - layer_l:
             - [BatchNorm2d, {'num_features': -1}]
             # C1
-            #- [Conv2d, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
-            #- [Activation, ReLU]
+            - [Conv2d, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
+            - [Activation, ReLU]
             # C2
             #- [Conv2dDS, {'in_channels': -1, 'out_channels': 64, 'kernel_size': [3,3], 'stride': 1, 'padding': 'same'}]
             #- [Activation, ReLU]
