--- a/config_autotagging.yaml
+++ b/config_autotagging.yaml
@@ -1,39 +1,39 @@
-# D1 I1 C1 -> GTZAN, LMS, 2D                MANO
-# D1 I2 C2 -> GTZAN, Waveform, SincNet      
-# D1 I2 C3 -> GTZAN, Waveform, Conv1D       MANO
-# D1 I2 C4 -> GTZAN, Waveform, TCN          MANO
-# D2 I1 C1 -> MTT, LMS, 2D                  MANO
-output_file: {'origin': 'TUTO_task_Auto_Tagging.ipynb', 'ext': '_D1-I2-C2.ipynb'}
+# D1 I1 C1 -> GTZAN, LMS, 2D            
+# D1 I2 C2 -> GTZAN, Waveform, SincNet
+# D1 I2 C3 -> GTZAN, Waveform, Conv1D
+# D1 I2 C4 -> GTZAN, Waveform, TCN
+# D2 I1 C1 -> MTT, LMS, 2D   <- default
+output_file: {'origin': 'TUTO_task_Auto_Tagging.ipynb', 'ext': '_D2-I1-C1.ipynb'}
 dataset:
     # D1
-    {'base': gtzan-genre, 'problem': multiclass, 'annot_key': genre, 'n_out': 10}
+    #{'base': gtzan-genre, 'problem': multiclass, 'annot_key': genre, 'n_out': 10}
     # D2
-    #{'base': mtt, 'problem': multilabel, 'annot_key': tag, 'n_out': 50}
+    {'base': mtt, 'problem': multilabel, 'annot_key': tag, 'n_out': 50}
 feature:
     # I1
-    #{'type': lms, 'nb_band': 128, 'L_n': 2048, 'STEP_n': 1024, 'patch_L_frame': 64, 'patch_STEP_frame': 32}
+    {'type': lms, 'nb_band': 128, 'L_n': 2048, 'STEP_n': 1024, 'patch_L_frame': 64, 'patch_STEP_frame': 32}
     # I2
-    {'type': waveform, 'patch_L_frame': 3200, 'patch_STEP_frame': 1000}
+    #{'type': waveform, 'patch_L_frame': 3200, 'patch_STEP_frame': 1000}
 model:
     name: AutoTagging
     block_l:
     - sequential_l:
         - layer_l:
             # C1  Frequency/Time
-            #- [LayerNorm, {'normalized_shape': -1}] #128,64 -> 128,256
-            #- [Conv2d, {'in_channels': 1, 'out_channels': 80, 'kernel_size': [128, 5], 'stride': [1,1]}]
-            #- [Squeeze, {'dim': [2]}] # --- (B, C, H=F, W=T) -> (B, C, T)
+            - [LayerNorm, {'normalized_shape': -1}] #128,64 -> 128,256
+            - [Conv2d, {'in_channels': 1, 'out_channels': 80, 'kernel_size': [128, 5], 'stride': [1,1]}]
+            - [Squeeze, {'dim': [2]}] # --- (B, C, H=F, W=T) -> (B, C, T)
             # C2, C3, C4 Temporal
-            - [LayerNorm, {'normalized_shape': [1, 3200]}]
+            #- [LayerNorm, {'normalized_shape': [1, 3200]}]
             # C2 SincNet            
-            - [SincNet, {'in_channels': 1, 'out_channels': 80, 'kernel_size': 251, 'stride': 1, 'sr_hz': 22050}]
-            - [AbsLayer, empty]
+            #- [SincNet, {'in_channels': 1, 'out_channels': 80, 'kernel_size': 251, 'stride': 1, 'sr_hz': 22050}]
+            #- [AbsLayer, empty]
             # C3 Conv1D
             #- [Conv1d, {'in_channels': 1, 'out_channels': 80, 'kernel_size': 251, 'stride': 15}]
             # C4 TCN
             #- [Conv1dTCN, {'in_channels': 1, 'num_channels': [4, 8, 16, 32]}]
             # C2, C3, C4 All temporal
-            - [MaxPool1d, {'kernel_size': 3, 'stride': 3}]
+            #- [MaxPool1d, {'kernel_size': 3, 'stride': 3}]
             # --- 
             - [LayerNorm, {'normalized_shape': -1}]
             - [Activation, LeakyReLU]
@@ -76,7 +76,7 @@ model:
             - ['Permute', {'shape':[0, 2, 1]}] # --- (B, T, C) -> (B, C, T)
             - [UnSqueeze, {'dim': 2}]
         - layer_l:
-            - [AutoPoolWeightSplit, empty]  # --- Suppose input (m, C, 1, W=T)
+            - [AutoPoolWeightSplit, empty]  # --- Suppose input (B, C, 1, W=T)
             - [Squeeze, {'dim': [2,3]}]
     - sequential_l:
         - layer_l:
